--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="./css/style.css" />
         <title>Welcome to the Snake Game!</title>
     </head>
     <body>
@@ -40,6 +40,5 @@
     </div>
 
         <script src="index.js"></script>
-        <script src="snake.js"></script>
     </body>
 </html>
